// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correct PlayerPage after loading 1`] = `
<div
  className="player"
>
  <video
    autoPlay={false}
    className="player__video"
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    poster="img/the-grand-budapest-hotel-bg.jpg"
    src="https://some-link"
    type="video/https://some-link"
  />
  <PlayerPageExit
    onExitButtonClick={[Function]}
  />
  <PlayerPageControls
    currentTime={0}
    isLoading={false}
    isPlaying={false}
    movieName="The Grand Budapest Hotel"
    onFullScreenButtonClick={[Function]}
    onPlayButtonClick={[Function]}
  />
  <Memo(Connect(Error)) />
</div>
`;

exports[`Should render correct PlayerPage while it's loading 1`] = `
<div
  className="player"
>
  <LoadingPage />
  <PlayerPageExit
    onExitButtonClick={[Function]}
  />
  <PlayerPageControls
    currentTime={0}
    isLoading={true}
    isPlaying={false}
    movieName="The Grand Budapest Hotel"
    onFullScreenButtonClick={[Function]}
    onPlayButtonClick={[Function]}
  />
  <Memo(Connect(Error)) />
</div>
`;
